# Critical-Infrastructure

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  TRANSLATION_GUIDE.md  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  seed_full.json
.github/workflows/: ci.yml
app/accounting/: apps.py  urls.py  views.py
app/api/: apps.py  permissions.py  serializers.py  urls.py  views.py
app/api/tests/: test_assets_api.py
app/assets/: __init__.py  admin.py  apps.py  forms.py  models.py  selectors.py  signals.py  urls.py  views.py
app/assets/migrations/: 0001_initial.py  0005_asset_url_nullable.py  __init__.py
app/assets/templatetags/: __init__.py  assets_tags.py
app/assets/tests/: test_asset_kind_inference.py
app/automation/: apps.py  urls.py  views.py
app/bands/: admin.py  apps.py  forms.py  models.py  public_urls.py  public_views.py  sitemaps.py  translation.py  urls.py  views.py
app/bands/migrations/: 0001_initial.py  0002_alter_band_name_de_alter_band_name_en_and_more.py  0003_band_genre.py
app/bands/tests/: test_band_models.py
app/cms/: urls.py  views.py
app/comms/: admin.py  apps.py  forms.py  models.py  urls.py  views_compose.py  views_inbox.py  views_mail.py  views_threads.py
app/comms/migrations/: 0001_initial.py  0002_initial.py
app/comms/services/: audience.py  send_internal.py
app/comms/templatetags/: comms_tags.py
app/core/: __init__.py  apps.py  asgi.py  auditlog.py  celery_app.py  context_processors.py  date_utils.py  encryption.py  middleware.py  modeltranslation_fields.py  settings.py  settings_cli.py  site_config.py  urls.py  views.py  wsgi.py
app/core/templatetags/: core_comms_tags.py  dictutils.py
app/door/: apps.py  urls.py  views.py
app/events/: admin.py  forms.py  models.py  public_urls.py  public_views.py  scheduling.py  translation.py  urls.py  views.py
app/events/migrations/: 0001_initial.py  0002_initial.py  0003_alter_eventcategory_name_de_and_more.py  0004_event_manual_occurrences.py
app/inventory/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
app/inventory/migrations/: 0001_initial.py  0002_alter_inventoryitem_menu_items_and_more.py  0002_inventorypackage.py  0003_merge_20251126_2322.py
app/maps/: apps.py  urls.py  views.py
app/menu/: admin.py  apps.py  forms.py  models.py  translation.py  urls.py  urls_cms.py  urls_public.py  views.py
app/menu/migrations/: 0001_initial.py  0002_alter_unitgroup_name_de_alter_unitgroup_name_en_and_more.py  0003_category_kind_generic.py
app/menu/templatetags/: menu_extras.py
app/menu/tests/: test_menu_models.py
app/merch/: __init__.py  forms.py  models.py  translation.py  urls.py  urls_public.py  views.py
app/merch/migrations/: 0001_initial.py
app/merch/tests/: test_merch_models.py
app/news/: admin.py  forms.py  models.py  public_urls.py  public_views.py  translation.py  urls.py  views.py
app/news/migrations/: 0001_initial.py  0002_newspost_translations.py  0003_alter_newspost_body_de_alter_newspost_body_en_and_more.py
app/pages/: admin.py  api_views.py  blocks.py  data_sources.py  forms.py  models.py  navigation.py  serializers.py  structured_data.py  translation.py  urls.py  urls_public.py  utils.py  utils_inline.py  views.py  views_public.py
app/pages/migrations/: 0001_initial.py  0002_alter_page_is_visible_alter_page_render_body_only_and_more.py  0003_page_layout_overrides.py  0004_page_theme.py  0005_page_custom_code.py
app/pages/templatetags/: inline_edit.py
app/pages/tests/: __init__.py  test_pages_app.py
app/pos/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/pos/migrations/: 0001_initial.py  0002_alter_sale_order_discount_type_and_more.py
app/pos/tests/: test_pos_models.py
app/public/menu/: urls.py  views.py
app/publicthemes/: apps.py
app/setup/: admin.py  apps.py  branding_assets.py  context_processors.py  forms.py  helpers.py  icon_pack.py  models.py  permissions.py  tunnel_manager.py  urls.py  views.py  views_alias.py  widgets.py
app/setup/migrations/: 0001_initial.py  0002_logo_secondary_icon_pack_filename.py  0003_logo_filefields.py  (+4 more)
app/shifts/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
app/social/: apps.py  urls.py  views.py
app/templates/: base_public.html
app/users/: admin.py  apps.py  forms.py  helpers.py  middleware.py  models.py  signals.py  urls.py  views.py
caddy/: Caddyfile
config/: site.json
vscode-terminal-logger/: README.md  extension.js  package.json
(+244 files in other folders)
